@@ -5,16 +5,19 @@ import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import org.example.backend.common.exception.BusinessException;
 import org.example.backend.mapper.DriveMapper;
 import org.example.backend.mapper.EntryMapper;
-import org.example.backend.model.args.CreateFolderArgs;
+import org.example.backend.mapper.StorageMapper;
+import org.example.backend.model.args.*;
 import org.example.backend.model.entity.Drive;
 import org.example.backend.model.entity.Entry;
-import org.example.backend.model.entity.User;
+import org.example.backend.model.entity.Storage;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class PersonalService {
@@ -22,10 +25,13 @@ public class PersonalService {
     private EntryMapper entryMapper;
     @Autowired
     private DriveMapper driveMapper;
+    @Autowired
+    private StorageMapper storageMapper;
 
     private static final int PERSONAL_DRIVE = 1;
     private static final int UNDELETED = 1;
     private static final int DELETED = 2;
+    private static final int FILE = 1;
     private static final int FOLDER = 2;
     private static final int EXPIRE_DAYS = 15;
 
@@ -68,32 +74,40 @@ public class PersonalService {
     }
 
     @Transactional
-    public void moveEntries(List<Long> entryIds, Long targetId, Long userId) {
-        Entry entry = entryMapper.selectById(targetId);
+    public void moveEntries(MoveEntryArgs args, Long userId) {
+        Entry entry = entryMapper.selectById(args.getTargetId());
         if (entry == null) throw new BusinessException("Entry does not exist");
 
         LambdaUpdateWrapper<Entry> updateWrapper = new LambdaUpdateWrapper<>();
-        updateWrapper.in(Entry::getId, entryIds)
-                .set(Entry::getParentId, targetId);
+        updateWrapper.in(Entry::getId, args.getIds())
+                .set(Entry::getParentId, args.getTargetId());
 
         int count = entryMapper.update(updateWrapper);
-        if (count != entryIds.size()) throw new BusinessException("Move entry failed");
+        if (count != args.getIds().size()) throw new BusinessException("Move entry failed");
     }
 
     @Transactional
-    public void copyEntries(Long entryId, Long targetId, Long userId) {
-        Entry dir = entryMapper.selectById(targetId);
+    public void copyEntries(CopyEntryArgs args, Long userId) {
+        Entry dir = entryMapper.selectById(args.getTargetId());
         if (dir == null) throw new BusinessException("Entry does not exist");
-
-        Entry entry = entryMapper.selectById(entryId);
+        Entry entry = entryMapper.selectById(args.getId());
         if (entry == null) throw new BusinessException("Entry does not exist");
+
+        // 目标目录下是否有同名文件
+        LambdaQueryWrapper<Entry> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(Entry::getParentId, entry.getParentId())
+                .eq(Entry::getEntryName, entry.getEntryName());
+        Entry sameNameEntry = entryMapper.selectOne(queryWrapper);
+        String entryName = sameNameEntry == null ?
+                entry.getEntryName() :
+                entry.getEntryName() + "-" + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss"));
 
         Entry copyEntry = Entry.builder()
                 .driveId(entry.getDriveId())
                 .userId(userId)
-                .parentId(targetId)
+                .parentId(args.getTargetId())
                 .storageId(entry.getStorageId())
-                .entryName(entry.getEntryName())
+                .entryName(entryName)
                 .entryType(entry.getEntryType())
                 .fileSize(entry.getFileSize())
                 .fileExt(entry.getFileExt())
@@ -102,20 +116,31 @@ public class PersonalService {
 
         int count = entryMapper.insert(copyEntry);
         if (count != 1) throw new BusinessException("Move entry failed");
+
+        LambdaUpdateWrapper<Storage> storageUpdate = new LambdaUpdateWrapper<>();
+        storageUpdate.setIncrBy(Storage::getRefCount, 1).eq(Storage::getId, entry.getStorageId());
+        int storageCount = storageMapper.update(storageUpdate);
+        if (storageCount != 1) throw new BusinessException("Move entry failed");
     }
 
     @Transactional
-    public void renameEntry(Long entryId, String newEntryName) {
-        Entry entry = entryMapper.selectById(entryId);
-        if (entry == null) throw new BusinessException("Entry does not exist");
+    public void renameEntry(RenameEntryArgs args, Long userId) {
+        Entry existedEntry = entryMapper.selectById(args.getId());
+        if (existedEntry == null) throw new BusinessException("Entry does not exist");
 
         // 新文件名校验
-        if (!validateFileName(newEntryName)) throw new BusinessException("Invalid file name");
+        if (!validateFileName(args.getNewEntryName())) throw new BusinessException("Invalid file name");
+
+        // 目标父目录下是否存在同名条目
+        LambdaQueryWrapper<Entry> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(Entry::getParentId, existedEntry.getParentId())
+                .eq(Entry::getEntryName, args.getNewEntryName());
+        Entry sameNameEntry = entryMapper.selectOne(queryWrapper);
+        if (sameNameEntry != null) throw new BusinessException("Folder already exists");
 
         // 重命名
         LambdaUpdateWrapper<Entry> updateWrapper = new LambdaUpdateWrapper<>();
-        updateWrapper.set(Entry::getEntryName, newEntryName)
-                .eq(Entry::getId, entryId);
+        updateWrapper.set(Entry::getEntryName, args.getNewEntryName()).eq(Entry::getId, args.getId());
         int count = entryMapper.update(updateWrapper);
         if (count != 1) throw new BusinessException("Rename entry failed");
     }
@@ -134,40 +159,49 @@ public class PersonalService {
     }
 
     @Transactional
-    public void deleteEntries(List<Long> entryIds, Long userId) {
+    public void deleteEntries(DeleteEntryArgs args, Long userId) {
         // 查询要删除的条目
         LambdaQueryWrapper<Entry> queryWrapper = new LambdaQueryWrapper<>();
-        queryWrapper.in(Entry::getId, entryIds)
-                .eq(Entry::getStatus, UNDELETED);
+        queryWrapper.eq(Entry::getStatus, UNDELETED).in(Entry::getId, args.getIds());
         List<Entry> entries = entryMapper.selectList(queryWrapper);
         if (entries == null || entries.isEmpty()) throw new BusinessException("entry does not exist");
 
         // 分离文件夹和文件
-        List<Long> folderIds = entries.stream()
-                .filter(e -> e.getEntryType() != null && e.getEntryType() == FOLDER)
-                .map(Entry::getId)
-                .toList();
+        Map<Integer, List<Long>> groupedMap = entries.stream()
+                .collect(Collectors.groupingBy(
+                        Entry::getEntryType, // 按EntryType分组
+                        Collectors.mapping(Entry::getId, Collectors.toList()) // 映射为id列表
+                ));
+        List<Long> fileIds = groupedMap.getOrDefault(FILE, new ArrayList<>());
+        List<Long> folderIds = groupedMap.getOrDefault(FOLDER, new ArrayList<>());
 
-        // 收集所有需要删除的条目ID（包括文件夹的子项）
-        Set<Long> allIds = new HashSet<>();
-        entries.forEach(e -> allIds.add(e.getId()));
-
-        if (!folderIds.isEmpty()) {
-            List<Entry> children = entryMapper.selectRecursiveChildEntryIdsBatch(folderIds);
-            children.forEach(c -> allIds.add(c.getId()));
+        // 删除文件
+        if (!fileIds.isEmpty()) {
+            LambdaUpdateWrapper<Entry> fileUpdate = new LambdaUpdateWrapper<>();
+            fileUpdate.set(Entry::getStatus, UNDELETED)
+                    .set(Entry::getDeleterId, userId)
+                    .set(Entry::getDeletedAt, LocalDateTime.now())
+                    .set(Entry::getExpiredAt, LocalDateTime.now().plusDays(EXPIRE_DAYS))
+                    .in(Entry::getId, fileIds);
+            int count = entryMapper.update(fileUpdate);
+            if (count != fileIds.size()) throw new BusinessException("delete entries failed");
         }
 
-        // 设置删除信息并更新状态
-        LocalDateTime now = LocalDateTime.now();
-        LambdaUpdateWrapper<Entry> updateWrapper = new LambdaUpdateWrapper<>();
-        updateWrapper.in(Entry::getId, allIds)
-                .set(Entry::getStatus, DELETED)
-                .set(Entry::getDeleterId, userId)
-                .set(Entry::getDeletedAt, now)
-                .set(Entry::getExpiredAt, now.plusDays(EXPIRE_DAYS));
+        // 删除文件夹及其所有子项
+        if (!folderIds.isEmpty()) {
+            List<Entry> children = entryMapper.selectRecursiveChildEntryIdsBatch(folderIds);
+            List<Long> allFolderIds = new ArrayList<>(folderIds);
+            allFolderIds.addAll(children.stream().map(Entry::getId).toList());
 
-        int count = entryMapper.update(updateWrapper);
-        if (count != allIds.size()) throw new BusinessException("delete entries failed");
+            LambdaUpdateWrapper<Entry> folderUpdate = new LambdaUpdateWrapper<>();
+            folderUpdate.set(Entry::getStatus, DELETED)
+                    .set(Entry::getDeleterId, userId)
+                    .set(Entry::getDeletedAt, LocalDateTime.now())
+                    .set(Entry::getExpiredAt, LocalDateTime.now().plusDays(EXPIRE_DAYS))
+                    .in(Entry::getId, allFolderIds);
+            int count = entryMapper.update(folderUpdate);
+            if (count != allFolderIds.size()) throw new BusinessException("delete entries failed");
+        }
     }
 
     public Long getPersonalDriveId(Long userId) {
@@ -178,7 +212,6 @@ public class PersonalService {
         if (drive == null) throw new BusinessException("Drive does not exist");
         return drive.getId();
     }
-
 
     private boolean validateFileName(String fileName) {
         if (fileName == null || fileName.isEmpty() || fileName.length() > 100) return false;
